# storage-wiper

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  LICENSE.md  README.md  justfile  meson.build  meson_options.txt  run-linters.sh
data/: com.github.storage-wiper.desktop  com.github.storage-wiper.policy  su.kidoz.storage_wiper.desktop  su.kidoz.storage_wiper.metainfo.xml  su.kidoz.storage_wiper.policy
data/dbus/: storage-wiper-helper.service.in  su.kidoz.storage_wiper.Helper.conf  su.kidoz.storage_wiper.Helper.service.in  su.kidoz.storage_wiper.Helper.xml
data/resources/: storage-wiper.gresource.xml
data/resources/ui/: algorithm-row.ui  disk-row.ui  main-window.ui
packaging/archlinux/: .SRCINFO  NOTES.md  PKGBUILD  PKGBUILD-git  PKGBUILD-local  README.md  storage-wiper.install
src/: Application.cpp  Application.hpp  main.cpp
src/algorithms/: ATASecureEraseAlgorithm.cpp  ATASecureEraseAlgorithm.hpp  AlgorithmRegistry.hpp  DoD522022MAlgorithm.cpp  DoD522022MAlgorithm.hpp  GOSTAlgorithm.cpp  GOSTAlgorithm.hpp  GutmannAlgorithm.cpp  GutmannAlgorithm.hpp  IWipeAlgorithm.hpp  RandomFillAlgorithm.cpp  RandomFillAlgorithm.hpp  SchneierAlgorithm.cpp  SchneierAlgorithm.hpp  VSITRAlgorithm.cpp  VSITRAlgorithm.hpp  VerificationHelper.cpp  VerificationHelper.hpp  ZeroFillAlgorithm.cpp  ZeroFillAlgorithm.hpp
src/cli/: CliApplication.cpp  CliApplication.hpp  ProgressDisplay.cpp  ProgressDisplay.hpp  main.cpp
src/core/: Command.hpp  Observable.hpp
src/di/: Container.hpp
src/helper/: main.cpp
src/helper/services/: DiskService.cpp  DiskService.hpp  SmartService.cpp  SmartService.hpp  WipeService.cpp  WipeService.hpp
src/interfaces/: IDiskService.hpp  IWipeService.hpp
src/models/: DiskInfo.hpp  ViewTypes.hpp  WipeTypes.hpp
src/mvvm/: ViewModel.hpp
src/services/: DBusClient.cpp  DBusClient.hpp  DevicePolicy.hpp  DiskService.cpp  DiskService.hpp  IDiskService.hpp  IWipeService.hpp  WipeService.cpp  WipeService.hpp
src/util/: FileDescriptor.hpp  Logger.cpp  Logger.hpp  RandomBuffer.hpp  Result.hpp  WriteHelpers.hpp
src/view_models/: MainViewModel.cpp  MainViewModel.hpp
src/viewmodels/: MainViewModel.cpp  MainViewModel.hpp
src/views/: AlgorithmRow.cpp  AlgorithmRow.hpp  DiskRow.cpp  DiskRow.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowContent.cpp  MainWindowContent.hpp
tests/: test_main.cpp
tests/fixtures/: TestFixtures.hpp
tests/mocks/: MockDiskService.hpp  MockWipeAlgorithm.hpp  MockWipeService.hpp
tests/unit/algorithms/: ATASecureEraseAlgorithmTest.cpp  DoD522022MAlgorithmTest.cpp  GOSTAlgorithmTest.cpp  GutmannAlgorithmTest.cpp  RandomFillAlgorithmTest.cpp  SchneierAlgorithmTest.cpp  VSITRAlgorithmTest.cpp  ZeroFillAlgorithmTest.cpp
tests/unit/di/: ContainerTest.cpp
tests/unit/services/: DiskServiceTest.cpp  WipeServiceTest.cpp
tests/unit/view_models/: MainViewModelTest.cpp
tests/unit/viewmodels/: MainViewModelTest.cpp
