option('enable_clang_tidy',
  type: 'boolean',
  value: false,
  description: 'Enable clang-tidy analysis (run: meson compile -C builddir clang-tidy)'
)

option('enable_cppcheck',
  type: 'boolean',
  value: false,
  description: 'Enable cppcheck analysis (run: meson compile -C builddir cppcheck)'
)

option('enable_tests',
  type: 'boolean',
  value: false,
  description: 'Build and enable unit tests with Google Test (run: meson test -C builddir)'
)

# Note: Use built-in meson options for sanitizers:
#   meson configure builddir -Db_sanitize=address        # AddressSanitizer (ASAN)
#   meson configure builddir -Db_sanitize=undefined      # UndefinedBehaviorSanitizer (UBSAN)
#   meson configure builddir -Db_sanitize=address,undefined  # Both ASAN + UBSAN
#   meson configure builddir -Db_sanitize=thread         # ThreadSanitizer (TSAN)
